--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -9,6 +9,10 @@ header {
     color: white;
     padding: 20px;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 header h1 {
@@ -18,6 +22,7 @@ header h1 {
 header input[type="text"] {
     padding: 10px;
     margin: 10px;
+    margin-right: 10px;
     width: 200px;
 }
 
@@ -35,7 +40,24 @@ header button:hover {
 }
 
 main {
+    margin-top: 20px;
     padding: 20px;
+}
+
+.task-form {
+    margin-bottom: 20px;
+}
+
+.task-form input[type="text"] {
+    margin-right: 10px;
+}
+
+.modal-form input[type="text"] {
+    margin-bottom: 10px;
+}
+
+.modal-form button {
+    margin-right: 10px;
 }
 
 ul {
